added dockerfile for sciencemeeting

--- a/src/Thesis/thesis_titleinformation.tex
+++ b/src/Thesis/thesis_titleinformation.tex
@@ -3,7 +3,9 @@
 \fachbereich{Fachbereich 5}
 \studiengang{Information Systems Engineering}
 \vertiefung{Systeme und Management}
-\titel{Information Systems Engineering}
+\titel{Development of a hardware and software framework for the automated characterization
+of permanent magnets
+for low-field MRI systemsg}
 \autor{Marcel Werner Heinrich Friedrich Ochsendorf}
 \matrnr{3120232}
 \betreuer{Prof. Dr.-Ing. Thomas Dey}
