--- a/src/Thesis/thesis_declaration.tex
+++ b/src/Thesis/thesis_declaration.tex
@@ -1,8 +1,8 @@
-Hiermit erkläre ich, dass ich die vorliegende Arbeit eigenständig und
-ohne fremde Hilfe angefertigt habe. Textpassagen, die wörtlich oder dem
-Sinn nach auf Publikationen oder Vorträgen anderer Autoren beruhen, sind
-als solche kenntlich gemacht. Die Arbeit wurde bisher keiner anderen
-Prüfungsbehörde vorgelegt und auch noch nicht veröffentlicht.
+I hereby declare that I have prepared this thesis independently and
+without outside assistance. Text passages, which are based literally or
+in the sense on publications or lectures of other authors, are marked as
+such. The work has not yet been submitted to any other examination
+authority and has not yet been published.
 
-Aachen, den \datum  \_\_\_\_\_\_\_\_\_\_\_\_,
+Aachen, \datum  \_\_\_\_\_\_\_\_\_\_\_\_,
 \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
