--- a/documentation/thesis/thesis_titleinformation.tex
+++ b/documentation/thesis/thesis_titleinformation.tex
@@ -1,6 +1,6 @@
 % Angaben für Titelseite
-\arbeitstyp{Masterarbeit}
-\fachbereich{Fachbereich 5}
+\arbeitstyp{Masterthesis}
+\fachbereich{Electrical Engineering and Information Technology}
 \studiengang{Information Systems Engineering}
 \vertiefung{Systeme und Management}
 \titel{Development of a hardware and software framework for the automated characterization
@@ -11,5 +11,5 @@ for low-field MRI systemsg}
 \betreuer{Prof. Dr.-Ing. Thomas Dey}
 \cobetreuer{Prof. Dr.-Ing. Volkmar Schulz}
 %\extbetreuer{- extbetreuer -}
-\datum{08.01.2024}
+\datum{01.01.2024}
 %\dank{- dank -}
