--- a/documentation/thesis/thesis_titleinformation.tex
+++ b/documentation/thesis/thesis_titleinformation.tex
@@ -1,8 +1,8 @@
 % Angaben für Titelseite
-\arbeitstyp{Masterthesis}
+\arbeitstyp{Master Thesis}
 \fachbereich{Electrical Engineering and Information Technology}
 \studiengang{Information Systems Engineering}
-\vertiefung{Systeme und Management}
+\vertiefung{Systems and management}
 \titel{Development of a hardware and software framework for the automated characterization
 of permanent magnets
 for low-field MRI systemsg}
