--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -1,37 +1,130 @@
-\hypertarget{motivation}{%
-\chapter{Motivation}\label{motivation}}
+\hypertarget{introduction}{%
+\chapter{Introduction}\label{introduction}}
 
-\hypertarget{tables}{%
-\chapter{Tables}\label{tables}}
+\hypertarget{fundamentals}{%
+\chapter{Fundamentals}\label{fundamentals}}
 
-\begin{longtable}[]{@{}lllll@{}}
-\caption{Das ist eine tolle Tabelle
-\label{Das_ist_eine_tolle_Tabelle.csv}}\tabularnewline
-\toprule
-year & make & model & description & price\tabularnewline
-\midrule
-\endfirsthead
-\toprule
-year & make & model & description & price\tabularnewline
-\midrule
-\endhead
-1997 & Ford & E350 & ac, abs, moon & 3000.00\tabularnewline
-1999 & Chevy & Venture «Extended Edition» & & 4900.00\tabularnewline
-1996 & Jeep & Grand Cherokee & MUST SELL! air, moon roof, loaded &
-4799.00\tabularnewline
-\bottomrule
-\end{longtable}
+\hypertarget{permanent-magnet-mri}{%
+\section{Permanent magnet MRI}\label{permanent-magnet-mri}}
 
-Tabelle ist toll: \ref{Das_ist_eine_tolle_Tabelle.csv}
+\hypertarget{typical-b0-magnet-structures}{%
+\subsection{Typical B0 Magnet
+structures}\label{typical-b0-magnet-structures}}
 
-\hypertarget{images}{%
-\section{Images}\label{images}}
+\hypertarget{shimming-procedure}{%
+\section{Shimming procedure}\label{shimming-procedure}}
 
-\begin{figure}
-\centering
-\includegraphics{./generated_images/border_Dies_ist_ein_Testbild.png}
-\caption{Dies ist ein Testbild \label{Dies_ist_ein_Testbild.png}}
-\end{figure}
+\hypertarget{state-of-the-art}{%
+\chapter{State of the art}\label{state-of-the-art}}
 
-Das Bild ist toll: \ref{Dies_ist_ein_Testbild.png}
+\hypertarget{opensource-projects}{%
+\section{Opensource projects}\label{opensource-projects}}
+
+\hypertarget{unified-sensor-interface}{%
+\section{Unified Sensor Interface}\label{unified-sensor-interface}}
+
+\hypertarget{sensor-selection}{%
+\section{Sensor selection}\label{sensor-selection}}
+
+\hypertarget{mechanical}{%
+\section{Mechanical}\label{mechanical}}
+
+\hypertarget{electrical-interface}{%
+\section{Electrical Interface}\label{electrical-interface}}
+
+\hypertarget{software-implementation}{%
+\chapter{Software implementation}\label{software-implementation}}
+
+\hypertarget{library}{%
+\section{Library}\label{library}}
+
+\hypertarget{concepts}{%
+\subsection{Concepts}\label{concepts}}
+
+\hypertarget{user-interaction-points}{%
+\subsection{User interaction points}\label{user-interaction-points}}
+
+\hypertarget{datastructures}{%
+\subsection{Datastructures}\label{datastructures}}
+
+\hypertarget{datapoints}{%
+\subsubsection{Datapoints}\label{datapoints}}
+
+\hypertarget{meta-data-management}{%
+\subsubsection{Meta-Data management}\label{meta-data-management}}
+
+\hypertarget{implementation}{%
+\subsection{Implementation}\label{implementation}}
+
+\hypertarget{examples}{%
+\subsection{Examples}\label{examples}}
+
+\hypertarget{concepts-1}{%
+\subsection{Concepts}\label{concepts-1}}
+
+\hypertarget{usability-improvements}{%
+\chapter{Usability improvements}\label{usability-improvements}}
+
+\hypertarget{commandline-interface}{%
+\section{Commandline interface}\label{commandline-interface}}
+
+\hypertarget{programmable-data-processing-pipeline}{%
+\section{Programmable data processing
+pipeline}\label{programmable-data-processing-pipeline}}
+
+\hypertarget{web-base-pipeline-configuration}{%
+\subsection{Web base pipeline
+configuration}\label{web-base-pipeline-configuration}}
+
+\hypertarget{third-party-software-support}{%
+\section{Third party software
+support}\label{third-party-software-support}}
+
+\hypertarget{package-management}{%
+\section{Package management}\label{package-management}}
+
+\hypertarget{documentation}{%
+\subsection{Documentation}\label{documentation}}
+
+\hypertarget{distribution}{%
+\subsection{Distribution}\label{distribution}}
+
+\hypertarget{continuous-integration}{%
+\subsection{Continuous Integration}\label{continuous-integration}}
+
+\hypertarget{end-to-end-testing}{%
+\subsection{End to end testing}\label{end-to-end-testing}}
+
+\hypertarget{evaluation}{%
+\chapter{Evaluation}\label{evaluation}}
+
+\hypertarget{prequesites-for-evaluation}{%
+\section{Prequesites for evaluation}\label{prequesites-for-evaluation}}
+
+\hypertarget{evaluation-confiugration}{%
+\section{Evaluation confiugration}\label{evaluation-confiugration}}
+
+\hypertarget{sensor-readout}{%
+\subsection{Sensor readout}\label{sensor-readout}}
+
+\hypertarget{processing-pipeline}{%
+\subsection{Processing pipeline}\label{processing-pipeline}}
+
+\hypertarget{test-scenarios}{%
+\section{Test scenarios}\label{test-scenarios}}
+
+\hypertarget{results}{%
+\section{Results}\label{results}}
+
+\hypertarget{conclusion-and-dicussion}{%
+\chapter{Conclusion and dicussion}\label{conclusion-and-dicussion}}
+
+\hypertarget{conclusion}{%
+\section{Conclusion}\label{conclusion}}
+
+\hypertarget{problems}{%
+\section{Problems}\label{problems}}
+
+\hypertarget{outlook}{%
+\section{Outlook}\label{outlook}}
 
