--- a/documentation/paper/main.tex
+++ b/documentation/paper/main.tex
@@ -12,14 +12,14 @@
 \usepackage{url}
 %\usepackage{setspace}
 \makeglossaries
-\newacronym{mri}{MRI}{Serious Games}
+\newacronym{mri}{MRI}{Magnetic resonance imaging}
 
 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{Implementation of an Open-Source modular mangetic field camera for usage in Low-Field MRI Systems}
+\title{Implementation of an Open-Source modular mangetic field camera hardware for usage in Low-Field MRI Systems}
 
 
 \author{\IEEEauthorblockN{1\textsuperscript{st} Marcel Werner Heinrich Friedrich Ochsendorf}
@@ -39,7 +39,7 @@ marcelochsendorf@alumni.fh-aachen.de}
 \end{abstract}
 
 \begin{IEEEkeywords}
-%Serious Gaming (\gls{sg}), \gls{vr}, Extended Reality (\gls{xr}), Computer Grafik (\gls{cg})
+magnetic resonance imaging (\gls{mri})
 \end{IEEEkeywords}
 
 
@@ -68,7 +68,23 @@ marcelochsendorf@alumni.fh-aachen.de}
 %easy to reproduce
 
 \subsection{Sensor selection}
-%tabelle möglicherdigitaler sensoren
+
+
+\begin{table}
+    \centering
+    \begin{tabular}{|l|c|}
+    \hline
+    \textbf{Name} & \textbf{Range (mT)} \\
+    \hline
+    Honeywell HMC5883L & 1.3 - 8.1 mT \\
+    STMicroelectronics LIS3MDL & 4 - 16 mT \\
+    TDK InvenSense ICM-20948 & 49 mT \\
+    \hline
+    \end{tabular}
+    \caption{Implemented 3D Magnetometer ICs}
+\end{table}
+
+
 % mixture of sensors
 % tablee with ranges
 % digital only at the moment
@@ -85,7 +101,13 @@ For this purpose, calibration and unit conversions are automatically applied in 
 \label{magcam_sensor_module_fig}
 \end{figure}
 
+The sensor slice shown in Figure \ref{anpmagcam_sensor_module_fig_fig} consists of 8 TLV493d sensors spaced 8mm apart on an 8mm x 64mm PCB.
+To build a larger sensor array, the golf finger pads of the board can be soldered to other similar boards in a daisy chain configuration.
 
+The daisy chain design simplifies connectivity as multiple slices can be connected in a linear fashion, reducing complex wiring.
+This approach simplifies expansion and troubleshooting, as new slices can be easily added or removed without disrupting the entire system.
+
+In this way, an 8x8 sensor array can be built quickly, and the mechanical stability and alignment is ensured by the interconnection of the golf finger pads.
 
 \subsection{Communication bus}
 
@@ -98,16 +120,26 @@ This enables the microcontroller of a sensor slice to recognise whether it is in
 
 
 \subsection{Powermanagement}
-sensor on off
 
-\subsection{Sensor-Selection}
-%tabelle möglicherdigitaler sensoren
+Each sensor slice also implements its own power management of the sensors, both at the hardware and software level, but this is optional.
+
+Depending on the type of sensor used, the current flowing through the individual layers can influence its measurement result.
+Therefore, the control logic and voltage converter components were placed separately from the sensors in the board layout.
+In addition, individual sensors can be specifically supplied with voltage. This was implemented using a switchable power supply (PCF847). 
+The software is later (when activated) able to activate only the sensor that is to be read out at the current time.
+A disadvantage of this implementation, however, is that each sensor must be reconfigured after activating the power supply.
+Depending on the selected sensor, this can take up to an additional 10ms per sensor measurement.
+
+
 
 
 \subsection{Mechanical integration}
 
 % 3d printed cases for magnet holders
 %
+
+
+
 %-----------------------------------------------------------------------------------------------------------------------------------------------
 % Embedded System Software
 \section{Embedded System Software}
@@ -152,6 +184,7 @@ The collection and subsequent processing of the data read from the sensor array 
 For this purpose, the Python framework is used, which was specially developed for the automated processing of magnetic field sensor data.
 By adapting the sensor software on the basis of the documentation, a direct evaluation of the sensor is possible through the library.
 Through the implemented auto-numbering routine and the feedback of this to the host software, each individual sensor is assigned to an individual measurement in the host software.
+
 
 \subsection{Data analysis pipeline}
 
