--- a/documentation/paper/main.tex
+++ b/documentation/paper/main.tex
@@ -186,18 +186,22 @@ By adapting the sensor software on the basis of the documentation, a direct eval
 Through the implemented auto-numbering routine and the feedback of this to the host software, each individual sensor is assigned to an individual measurement in the host software.
 
 
+\subsection{Calibration strategy}
+
+
+\subsection{Measurement Run}
+
+
 \subsection{Data analysis pipeline}
 
 
 
 
 
-\subsection{Calibration Run}
-
 cli einstellungen
 + ergebnis
 
-\subsection{Measurement Run}
+
 
 
 
